# forge

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  pyrightconfig.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
agents/: doc-gap-scanner.md  doc-sync-auditor.md  python-quality-auditor.md  python-security-auditor.md  python-test-author.md  reference-auditor.md
commands/: audit.md  build.md  check.md  decide.md  docs.md  init.md  override.md  plan.md  reference.md  release.md  review.md  status.md
docs/: RELEASING.md  state-schema.md
docs/plans/: 0001-plugin-enhancements.md
hooks/: hooks.json
hooks/scripts/: _bootstrap.py  auto_format.py  inject_reference.py  load_directives.py  mark_dirty.py  require_audit.py  require_check.py  require_plan.py  require_review.py  require_uv.py  stop_gate.py
lib/: __init__.py  cmdscan.py  decisions.py  doc_claims.py  env_scan.py  fingerprint.py  gate.py  hookio.py  references.py  security.py  state.py  status.py  versions.py
references/: cli.md  django.md  fastapi.md  library.md  pytest.md  python-base.md
templates/: CLAUDE.md.tmpl  Dockerfile.dev.tmpl  Dockerfile.django.dev.tmpl  Dockerfile.django.tmpl  Dockerfile.tmpl  changelog.tmpl  ci.yml.tmpl  directives.md.tmpl  django_healthcheck_management_command.tmpl  docker-compose.dev.yml.tmpl  docker-compose.django.dev.yml.tmpl  docker-compose.django.yml.tmpl  docker-compose.yml.tmpl  dockerignore.tmpl  env.example.tmpl  gitignore.tmpl  pre-commit-config.yaml.tmpl  pyproject.toml.tmpl
templates/docs/: architecture.md.tmpl  index.md.tmpl
templates/docs/decisions/: README.md.tmpl  _template.md
templates/scripts/: check_env_sync.py.tmpl
tests/: conftest.py  test_bin.py  test_bump.py  test_cmdscan.py  test_command_refs.py  test_decisions.py  test_doc_claims.py  test_env_scan.py  test_fingerprint.py  test_gate.py  test_hookio.py  test_hooks_context.py  test_hooks_integration.py  test_references.py  test_require_review.py  test_security.py  test_state.py  test_status.py  test_versions.py
